Adding masterWebRoute as an output of "get"
